# django-docker

./: .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
config/: urls.py  wsgi.py
config/settings/: common.py  local.py  production.py
docker/dokku/: .travis.yml  Dockerfile  app.json  deploy.sh
docker/local/: Dockerfile-dev  Dockerfile.web  entrypoint.sh  start.sh
locale/de/LC_MESSAGES/: django.po
main/: models.py  views.py
main/migrations/: 0001_initial.py
main/tests/: test_main.py  test_models.py  test_nothing.py  test_views.py
settings/: settings.py  urls.py  wsgi.py
