[tool.poetry]
name = "django-docker"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8.5"
django = "^3.0.7"
gunicorn = "^20.0.4"
django-environ = "^0.4.5"
gevent = "1.4.0"
whitenoise = "^5.0.1"
raven = "^6.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
werkzeug = "^1.0.1"
django-debug-toolbar = "^2.2"
ipdb = "^0.13.2"
pytest-django = "^3.9.0"
django-extensions = "^2.2.9"
pytest-isort = "^0.3.1"
pytest-sugar = "^0.9.2"
coverage = "^5.0.4"
django-coverage-plugin = "^1.8.0"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"

[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry>=1.0.5"]